Enhance project structure and functionality: - Update .gitignore to include additional file types - Refine requirements.txt with specific versioning for dependencies - Implement data loading with fallback in run_kpi.py and run_mvp.py - Improve braking distance calculations and controller safety in controllers.py - Add metrics for headway and throughput in metrics.py - Enhance simulation finish detection in sim.py - Update TrainState class for non-negative parameters in train.py - Create demo data generation in convert_k2_to_segments.py - Add parameter sweep functionality in run_sweep.py - Implement comprehensive unit tests in test_basic.py and test_sweep.py

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,37 @@
+# Python
 .venv/
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
+.Python
+*.so
+
+# IDE
+.vscode/settings.json
+.idea/
+
+# Outputs and results
 outputs/
+*.png
+*.csv
+
+# Jupyter
 *.ipynb_checkpoints
+.ipynb_checkpoints/
+
+# Data files (optional - remove if you want to track demo data)
+# data/
+# *.xls
+# *.xlsx
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+
+# Temporary files
+*.tmp
+*.temp
