--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,15 @@ xgboost>=1.6.0
 # Excel file reading
 openpyxl>=3.0.0
 xlrd>=2.0.0
+
+# Web scraping and HTTP requests
+requests>=2.28.0
+beautifulsoup4>=4.10.0
+
+# Interactive UI (optional)
+streamlit>=1.28.0
+plotly>=5.15.0
+
+# Reinforcement Learning (optional)
+# gymnasium>=0.29.0
+# stable-baselines3>=2.0.0
