--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,11 @@ outputs/
 *.png
 *.csv
 
+# Generated GeoJSON files - large output files
+*.geojson
+railway_segments.geojson
+train_movements.geojson
+
 # Jupyter
 *.ipynb_checkpoints
 .ipynb_checkpoints/
@@ -35,3 +40,4 @@ Thumbs.db
 # Temporary files
 *.tmp
 *.temp
+temp_*.csv
